--- a/graphic.html
+++ b/graphic.html
@@ -154,7 +154,7 @@
             <img class="img-fluid" src="img/graphics/gr05.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Graphics</h4>
+            <h4>Greeting Cards & Illustrations</h4>
            <!-- <p class="text-muted">Website Design</p>-->
           </div>
         </div>
