--- a/high-security.html
+++ b/high-security.html
@@ -68,7 +68,7 @@
     </div>
   </nav>
 
-<header class="porthead1">
+<header class="hsechead">
     <div class="container">
       <div class="intro-text">
       </div>
