--- a/plastic.html
+++ b/plastic.html
@@ -165,40 +165,33 @@
 	  
 	<div class="row">
         <div class="col-md-4 portfolio-item no-padding">
-          <img class="img-fluid" src="img/plastics/IC01.jpg" alt="">
+          <img class="img-fluid" src="img/plastics/pl.jpg" alt="">
         </div>
         <div class="col-md-4 portfolio-item no-padding">
 			<div class="row">
 				<div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/IC02.jpg" alt="">
+              <img class="img-fluid" src="img/plastics/pl.jpg" alt="">
         </div>
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/IC03.jpg" alt="">
+              <img class="img-fluid" src="img/plastics/pl12.jpg" alt="">
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/IC04.jpg" alt="">
-            </div>
-            </div>
-          </div>
-		  <div class="row">
-            <div class="col-md-6 no-padding">
-			 <img class="img-fluid" src="img/plastics/IC06.jpg" alt="">
-              <img class="img-fluid" src="img/plastics/IC05.jpg" alt="">
+              <img class="img-fluid" src="img/plastics/pl13.jpg" alt="">
             </div>
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/IC07.jpg" alt="">
+              <img class="img-fluid" src="img/plastics/pl14.jpg" alt="">
             </div>
           </div>
+        </div>
        	<div class="col-md">
           <div class="portfolio-caption">
             <h4>PolyIC</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
           </div>
         </div>
-	</div>
-    
+    </div>
 	
 	  
 	  <div class="row">
@@ -208,30 +201,190 @@
           </div>
 	  <div class="col-md-4 portfolio-item no-padding">
         <div class="row">
-          <img class="img-fluid" src="img/plastics/gr02.jpg" alt="">
+          <img class="img-fluid" src="img/graphics/gr02.jpg" alt="">
         </div>
 		</div>
         <div class="col">
           <div class="row">
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/st01.jpg" alt="">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
             </div>
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/st02.jpg" alt="">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/st03.jpg" alt="">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
             </div>
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/st04.jpg" alt="">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
             </div>
           </div>
         </div>
         </div>
-      </div>  
-	
+      </div>
+	  
+	  
+	  
+	<div class="row">
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+               <!--<i class="fas fa-plus fa-3x"></i>-->
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl01.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+         <p class="text-muted"></p>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+               </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl02.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+            <!--<p class="text-muted">Graphic Design</p>-->
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl03.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Identity</p>-->
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl04.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Branding</p>-->
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl05.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Website Design</p>-->
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl06.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		  <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl07.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		  <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl08.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		  <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl09.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		  <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal10">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl10.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		  <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal11">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl11.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		  <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal12">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/plastics/pl12.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+    </div>
   </section>
 
   <!-- Footer -->
